Changes in controller tests